# MemoryPlugGUI

./: CMakeLists.txt  Linux.cmake  README.md  Windows.cmake  main.cpp
include/GUI/: MainGUI.h  WindowManager.h
include/Window/: MainWindowObject.h  SelectProcWindow.h  TargetSelector.h  WindowDataObject.h
include/Window/Class/: CharBuff.h  TCP.h
include/Window/Data/: TargetData.h
lib/: CharBuff.cpp  MainGUI.cpp  MainWindowObject.cpp  SelectProcWindow.cpp  TCP.cpp  TargetData.cpp  TargetSelector.cpp  WindowDataObject.cpp  WindowManager.cpp
